Add try_vote and alter types

--- a/pallets/faterium-polls/Cargo.toml
+++ b/pallets/faterium-polls/Cargo.toml
@@ -34,6 +34,7 @@ sp-io = { version = "6.0.0", default-features = false, git = "https://github.com
 # Used for Faterium Polls testing environment
 pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
 pallet-scheduler = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
+pallet-treasury = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
 
 [features]
 default = ["std"]
