--- a/pallets/faterium-polls/Cargo.toml
+++ b/pallets/faterium-polls/Cargo.toml
@@ -26,6 +26,7 @@ sp-runtime = { version = "6.0.0", default-features = false, git = "https://githu
 frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
 # TODO: Remove this crate. Only for reference.
 pallet-democracy = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
+pallet-treasury = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
 
 [dev-dependencies]
 sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
@@ -34,7 +35,6 @@ sp-io = { version = "6.0.0", default-features = false, git = "https://github.com
 # Used for Faterium Polls testing environment
 pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
 pallet-scheduler = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
-pallet-treasury = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
 
 [features]
 default = ["std"]
@@ -47,6 +47,7 @@ std = [
 	"sp-runtime/std",
 	"frame-election-provider-support/std",
 	"pallet-democracy/std",
+	"pallet-treasury/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
