--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,9 +4,9 @@ name: Check Set-Up & Build
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -15,7 +15,7 @@ on:
 jobs:
   check:
     # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set-Up
-        run: sudo apt install -y git clang curl libssl-dev llvm libudev-dev
+        run: sudo apt install -y git clang curl libssl-dev llvm libudev-dev protobuf-compiler
 
       - name: Install Rustup
         run: |
@@ -33,11 +33,9 @@ jobs:
           rustup update nightly
           rustup update stable
           rustup target add wasm32-unknown-unknown --toolchain nightly
-
       - name: Check Build
         run: |
           SKIP_WASM_BUILD=1 cargo check --release
-
       - name: Check Build for Benchmarking
         run: >
           pushd node &&
